[tool.poetry]
name = "medium-markdown-posts-tool"
version = "0.1.0"
description = ""
authors = ["liuliu <liuliugit@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
